Set a max height for the EditPanel

--- a/woost/views/resources/styles/EditPanel.css
+++ b/woost/views/resources/styles/EditPanel.css
@@ -17,6 +17,11 @@
     z-index: 10000;
 }
 
+.EditPanel.expanded {
+    max-height: 100%;
+    overflow: auto;
+}
+
 .EditPanel .panel_content {
     padding: 1em;
 }
