Added the installation_id and installation_color attributes in woost.app.
For now, these attributes make it possible to visually distinguish different
installations of the same site at a glance (by using a distinct color for the
backoffice header bar, or by applying custom CSS rules, respectively).

In the future, installation_id will be instrumental in achieving synchronization
of content across site installations.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -43,14 +43,11 @@ body {
 }
 
 .BackOfficeLayout .header {
+    position: relative;
     padding: 0.6em;
     height: 1.5em;
-    background-color: rgb(245,245,245);
-    background-color: #eceeef;
     background-repeat:repeat-y;
-    background-image: url(../images/header_background.png);
-    border-bottom: 1px solid rgb(200,210,220);
-    border-bottom: 1px solid rgb(180,190,200);
+    background-color: #3e4351;
 }
 
 .BackOfficeLayout .header h1 {
@@ -58,7 +55,8 @@ body {
     font-size: 120%;
     padding: 0;
     margin: 0;
-    color: rgb(75,85,95);
+    color: white;
+    text-shadow: 0 0 6px rgba(30,30,30,0.8);
 }
 
 .BackOfficeLayout .header h1 a {
@@ -87,13 +85,15 @@ body {
 }
 
 .BackOfficeLayout .identity {
-    float: right;
-    margin-top: 0.2em;
+    position: absolute;
+    bottom: 1em;
+    right: 0.4em;
     font-size: 0.8em;
+    border-radius: 0.2em;
+    color: white;
 }
 
 .BackOfficeLayout .identity strong {
-    color: rgb(75,75,75);
     font-weight: bold;
 }
 
@@ -105,13 +105,19 @@ body {
 
 .BackOfficeLayout .identity button {
     margin-left: 0.7em !important;    
+    color: rgba(255,255,255,0.8) !important;
+    text-decoration: underline !important;
+}
+
+.BackOfficeLayout .identity button:hover {
+    color: white !important;
 }
 
 .BackOfficeLayout .user_views_bar {
     padding: 0.3em 0.8em;
     font-size: 90%;
     background-color: rgb(245,245,245);
-    border-bottom: 1px solid rgb(230,230,230);
+    border-bottom: 1px solid #ccc;
 }
 
 .BackOfficeLayout .user_views_bar {
@@ -699,7 +705,7 @@ body.scripted .BackOfficeLayout .Table .selection {
 }
 
 .BackOfficeLayout .Table {
-    border: 1px solid #eee;
+    border: 1px solid #d6d6d6;
 }
 
 .BackOfficeLayout .PropertyTable th {
@@ -719,18 +725,21 @@ body.scripted .BackOfficeLayout .Table .selection {
 }
 
 .BackOfficeLayout .Table th {
-    border: 1px solid rgb(200,205,212);
+    border: 1px solid #ccc;
 }
 
 .BackOfficeLayout .Table th a {
     text-decoration: none;
 }
 
-.BackOfficeLayout .Table th {
+.BackOfficeLayout .Table th,
+.ObjectDiff th {
     background-position: bottom left;
     background-repeat: repeat-x;
     background-image: url(../images/header.png);
-    background-color: rgb(220,223,227);
+    background-image: -webkit-linear-gradient(#eee, #d6d6d6);
+    background-image: linear-gradient(#eee, #d6d6d6);
+    background-color: #e0e0e0;
 }
 
 .BackOfficeLayout .ContentTable td,
@@ -950,12 +959,8 @@ body.scripted .BackOfficeLayout .Table .selection {
     min-width: 19em;
 }
 
-.BackOfficeLayout .Table .even td.sorted {
-    background-color: rgb(220,225,227);
-}
-
-.BackOfficeLayout .Table .odd td.sorted {
-    background-color: rgb(235,240,247);
+.BackOfficeLayout .Table th.sorted span.label {
+    font-weight: bold;
 }
 
 .BackOfficeLayout .Table tr.draft td {
@@ -1123,8 +1128,8 @@ body.scripted .BackOfficeLayout .Table .selection {
 .BackOfficeLayout .toolbar_box {
 	clear: both;
     margin-top: 1.5em;
-	background-color: rgb(242,240,235);
-	border: 1px solid rgb(232,230,225);    
+	background-color: #f2f0eb;
+	border: 1px solid #dcd9d0;
 }
 
 .BackOfficeLayout .toolbar_box .toolbar {
@@ -1132,6 +1137,10 @@ body.scripted .BackOfficeLayout .Table .selection {
     margin: 0.2em;
     border: none;
     background-color: transparent;
+}
+
+.BackOfficeLayout .toolbar.item_buttons {
+    padding: 0 0.4em;
 }
 
 .BackOfficeLayout .toolbar .action_button,
