--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -26,7 +26,7 @@ body {
     background-image: -moz-linear-gradient(#f6f6f6,#ccc);
     background-image: -webkit-linear-gradient(#f6f6f6,#ccc);
     padding: 0.3em 0.7em;
-    border-radius: 0.5em;
+    border-radius: 0.3em;
     border: 1px solid #aaa;
     -moz-box-shadow: 1px 1px 4px #bbb;
     cursor: pointer;
@@ -1743,7 +1743,8 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
 .preview-error-box,
 .BackOfficeLayout .ErrorBox,
 .BackOfficeLayout .error_box,
-.BackOfficeLayout .notification_box .error {
+.BackOfficeLayout .notification_box .error,
+.BackOfficeInstallationSyncView .sync_request_error_report {
     color: black;
     border: 1px dotted rgb(200,160,120);
     background-color: rgb(245,230,215);
@@ -3365,5 +3366,177 @@ div.success_label {
     background-position: left center;
     padding-left: 0.8em;
     white-space: nowrap;
+}
+
+/* BackOfficeInstallationSyncView
+-----------------------------------------------------------------------------*/
+.BackOfficeInstallationSyncView .item_body {
+    padding-top: 1em;
+    padding-left: 0.5em;
+}
+
+.BackOfficeInstallationSyncView .item_body section + section {
+    margin-top: 2em;
+}
+
+.BackOfficeInstallationSyncView .item_body section > h1 {
+    font-size: 1em;
+    color: #333;
+    margin-top: 0;
+    padding-bottom: 0.2em;
+    border-bottom: 1px solid #ddd;
+}
+
+.BackOfficeInstallationSyncView .item_body .item_list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.BackOfficeInstallationSyncView .item_body .item_list li + li {
+    margin-top: 0.4em;
+}
+
+.BackOfficeInstallationSyncView .item_body .item_list li .item_check {
+    margin: 0;
+    margin-right: 0.3em;
+}
+
+.BackOfficeInstallationSyncView .item_body .item_list .item_description {
+    padding-right: 2em;
+}
+
+.BackOfficeInstallationSyncView .item_body .item_list select {
+    display: table-cell;
+}
+
+.BackOfficeInstallationSyncView .ObjectDiff {
+    margin-left: 1.4em;
+}
+
+.Dialog.diff_dialog {
+    top: auto;
+    left: auto;
+    right: auto;
+    bottom: auto;
+    width: auto;
+    height: auto;
+}
+
+.Dialog.diff_dialog .dialog_header {
+    padding: 0.6em 0;
+}
+
+.Dialog.diff_dialog .dialog_heading {
+    font-size: 1.2em;
+}
+
+.Dialog.diff_dialog .dialog_header .icon {
+    margin-right: 0.2em;
+    position: relative;
+    top: 0.1em;
+}
+
+.Dialog.diff_dialog .differences {
+    margin: 0;
+}
+
+.BackOfficeInstallationSyncView .ObjectDiff .differences,
+.diff_dialog .ObjectDiff .differences {
+    border-collapse: collapse;
+}
+
+.BackOfficeInstallationSyncView .ObjectDiff .differences th,
+.BackOfficeInstallationSyncView .ObjectDiff .differences td,
+.diff_dialog .ObjectDiff .differences th,
+.diff_dialog .ObjectDiff .differences td {
+    border: 1px solid #ccc;
+    padding: 0.4em 0.8em !important;
+}
+
+.BackOfficeInstallationSyncView .modified_section .diff_dialog_button {
+    font-size: 0.7em;
+    margin-left: 1em;
+    text-decoration: none;
+}
+
+.BackOfficeInstallationSyncView .selection_controls {
+    float: none;
+    margin: 0;
+    margin-top: 2em;
+    padding: 0;
+}
+
+.BackOfficeInstallationSyncView .sync_buttons {
+    margin-top: 1em;
+}
+
+/* ObjectDiff
+-----------------------------------------------------------------------------*/
+.ObjectDiff .differences {
+    margin: 1em 0;
+    font-size: 85%;
+}
+
+.ObjectDiff .differences th {
+    padding-bottom: 0.75em;
+}
+
+.ObjectDiff .diff_add {
+    color: rgb(0,125,0);
+    font-weight: bold;
+}
+
+.ObjectDiff .diff_sub {
+    color: rgb(150,0,0);
+    font-weight: bold;
+}
+
+.ObjectDiff .diff_change {
+    color: rgb(25,25,175);
+    font-weight: bold;
+}
+
+.ObjectDiff .language {
+    color: rgb(75,75,75);
+    font-style: italic;
+    font-size: 85%;
+}
+
+.ObjectDiff .differences td,
+.ObjectDiff .differences th {
+    text-align: left;
+    vertical-align: top;
+}
+
+.ObjectDiff .differences th + th,
+.ObjectDiff .differences td + td {
+    padding-left: 1em;
+}
+
+.ObjectDiff .diff_unit {
+    display: inline-block;
+}
+
+.ObjectDiff .diff_unit + .diff_unit {
+    margin-left: 0.5em;
+}
+
+.ObjectDiff .collection_diff .diff_unit {
+    display: block;
+}
+
+.ObjectDiff .collection_diff .diff_unit + .diff_unit {
+    margin-left: 0;
+}
+
+.BackOfficeDiffView .ObjectDiff .differences .check {
+    width: 1em;
+}
+
+.BackOfficeDiffView .buttons {
+    text-align: left;
+    padding: 0;
+    margin: 1em 0;
 }
 
