Replaced a blue border with a gray one in the backoffice.
Following the introduction of application.installation_color, the backoffice
should be more color neutral.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -2600,7 +2600,7 @@ button.TypeSelectorButton {
 }
 
 .BackOfficeLayout .stack_node.top {
-    border: 2px solid rgb(200,210,220);
+    border: 2px solid #ccc;
     background-color: white;
     padding-bottom: 0.8em;
 }
