--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -2235,24 +2235,30 @@ button.TypeSelectorButton span {
 .BackOfficeLayout .CollectionView .filters {
     font-size: 85%;
     margin-top: 0.3em;
-    border: 1px solid rgb(185,205,145);
-    background-color: rgb(245,245,245);
+    border: 1px solid #b4c0b8;    
 }
 
 .BackOfficeLayout .CollectionView .filters .filters_label {
     padding: 0.4em 0.6em;
-    border-bottom: 1px solid rgb(185,205,145);
-    background-image: url(../images/search_header.png);
+    border-bottom: 1px solid #b2c1b7;
+    background-color: #c7cdc9;
+    background-image: -webkit-linear-gradient(#cfdad3,#c7cdc9);
+    color: #39413c;
+    font-weight: bold;
 }
 
 .BackOfficeLayout .CollectionView .filters .FilterBox {
     padding: 0.5em;
     padding-top: 1em;
-    background-color: rgb(240,240,240);
+    background-color: #e8ece9;
 }
 
 .BackOfficeLayout .FilterBox .filter_entry {
     clear: left;
+}
+
+.BackOfficeLayout .FilterBox .filter_entry .field {
+    margin-bottom: 0;
 }
 
 .BackOfficeLayout .FilterBox .filter_entry .filter_desc,
