blocks extension: removed an unwanted margin from the 'fallback' image alignment

--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -113,6 +113,14 @@
     top: 0;
 }
 
+.TextBlockView.fallback .image_gallery li {
+    margin: 0;
+}
+
+.TextBlockView.fallback .image_gallery li img {
+    display: block;
+}
+
 /* PublishableGrid
 -----------------------------------------------------------------------------*/ 
 .PublishableGrid ul.publishable_list {
