--- a/woost/views/resources/styles/GenericSiteLayout.css
+++ b/woost/views/resources/styles/GenericSiteLayout.css
@@ -1,4 +1,10 @@
 
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 html,
 body {
     background-color: #eee;
@@ -120,16 +126,18 @@ body {
 
 /* Site menu
 -----------------------------------------------------------------------------*/
-.GenericSiteLayout .menu {
-    clear: left;
+.GenericSiteLayout .navigation {
     float: left;
+    width: 20em;
+}
+
+.GenericSiteLayout .menu {
     padding-left: 2em;
     padding-right: 2em;
     padding-top: 1.4em;
     margin: 0;
     border-top: none;
     border-right: 1px solid rgb(230,230,230);
-    width: 10em;
 }
 
 .GenericSiteLayout .menu, .menu ul {
@@ -157,17 +165,18 @@ body {
     font-weight: bold;
 }
 
-.GenericSiteLayout .menu + .main {
-    margin-left: 13em !important;
+.GenericSiteLayout .navigation + .main {
     border-left: 1px solid #ddd;
+    margin-left: -1px;
 }
 
 /* Content
 -----------------------------------------------------------------------------*/
 .GenericSiteLayout .main {
     float: left;
+    width: 80em;
     padding-right: 1.5em;
-    padding-left: 2em;
+    padding-left: 6em;
     padding-bottom: 1.5em;
 }
 
