Added styles for search boxes in the backoffice

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -299,6 +299,7 @@ body {
 .BackOfficeLayout input[type=url],
 .BackOfficeLayout input[type=email],
 .BackOfficeLayout input[type=number],
+.BackOfficeLayout input[type=search],
 .BackOfficeLayout input[type=tel],
 .BackOfficeLayout textarea,
 .BackOfficeLayout .CodeMirror-wrapping {
@@ -306,6 +307,11 @@ body {
     padding: 0.2em;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+}
+
+.BackOfficeLayout input[type=search] {
+    padding-left: 1.6em !important;
+    background: white url(../images/search_box.png) 0.3em center no-repeat;
 }
 
 .BackOfficeLayout .CodeMirror-wrapping {
